k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jardim-dos-sorrisos-svc
spec:
  type: ClusterIP
  selector:
    app: jardim-dos-sorrisos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
